<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TravelActivity">

    <item
        android:id="@+id/opt_clear"
        android:icon="@drawable/ic_clear_cancel"
        android:orderInCategory="100"
        android:title="@string/opt_clear_cancel"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/opt_direction_save"
        android:icon="@drawable/ic_play"
        android:orderInCategory="99"
        android:title="@string/opt_direction_save"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/opt_play_stop"
        android:icon="@drawable/ic_play"
        android:orderInCategory="97"
        android:title="@string/opt_start_stop"
        android:visible="false"
        app:showAsAction="always" />

</menu>
